# text2terrain

./: .gitignore  README.md  fireworks.yaml  inference.py  pyproject.toml  simple_test.py  terrain_viewer  test_grid_generation.py  test_new_architecture.py  up_file.txt
configs/: base.yaml
data/: data.config  lora_conv.py  to_json.py
data/samples/: data.json  dataset_all.jsonl  dataset_manifest.json  generation_stats.json
data/samples1/: dataset_all.jsonl  dataset_manifest.json  generation_stats.json
render/: eval_height.py  reconstruct_heightmap.py  render.c  terrain_viewer.c  terrain_viewer.py
render/libs/: build.sh
render/shaders/: dots.fs
scripts/: build_all.py  setup.py
src/: __init__.py
src/compatibility/: __init__.py  json_validator.py  legacy_adapter.py
src/data_gen/: __init__.py  captions.py  feature_captions.py  generator.py  generator_v2.py  llm_caption_generator.py  preprocessing.py  quality_metrics.py  terrain_validator.py  validate_determinism.py
src/engine/: __init__.py  grid_manager.py  heightmap_analyzer.py  terrain_composer.py
src/engine/feature_generators/: __init__.py  base.py  biomes.py  caves.py  mountains.py  rivers.py  valleys.py
src/inference/: __init__.py  api.py  sampler.py  text2param.py
src/procgen/: __init__.py  core.py  grammar.py  jax_backend.py
src/procgen/modules/: __init__.py  erosion.py  noise.py  warp.py
src/training/: __init__.py  datamodule.py  model.py  train.py
